// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change styles 1`] = `
<DocumentFragment>
  <div
    class="css-ypce8f"
    data-chakra-component="CFlex"
    data-testid="flex"
  >
    Flex Me
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <div
    class="css-zlhv1"
    data-chakra-component="CFlex"
    data-testid="flex"
  >
    Flex Me
  </div>
</DocumentFragment>
`;
